# C-Project

./: README.md  inhert.cpp
ElevatorEmulator/: CMakeLists.txt  Counter.cpp  Counter.h  MedicalStaff.cpp  MedicalStaff.h  Passenger.cpp  Passenger.h  Patients.cpp  Patients.h  People.cpp  People.h  Security.cpp  Security.h  SecurityPersonnel.cpp  SecurityPersonnel.h  Staff.cpp  Staff.h  SupportStaff.cpp  SupportStaff.h  Visitors.cpp  Visitors.h  main.cpp  uml.txt
